--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,11 @@ edition = "2021"
 [dependencies]
 bevy_embedded_assets = "0.9.1"
 bevy_framepace = "0.14.1"
+bevy-inspector-egui = "0.21.0"
 big-brain = "0.18.0"
 serde = "1.0.192"
 rand = "0.8.5"
+leafwing-input-manager = "0.11.1"
 
 [dependencies.bevy]
 version = "0.12.0"
