--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,8 @@ serde = "1.0.192"
 rand = "0.8.5"
 leafwing-input-manager = "0.11.1"
 bevy_mod_debugdump = "0.9.0"
-bevy_egui = "0.23.0"
+bevy_egui = "0.24.0"
+bevy_editor_pls = "0.7.0"
 
 [dependencies.bevy]
 version = "0.12.0"
